examples/errors/range-out-of-bounds.spcasm
incbin "../binary.bin":20000-50000